# zerograd

./: .gitignore  README.md  pyproject.toml
examples/: README.md  _checkpoint.py  _data.py  _xor_model.py  experiment_batch_vs_pop.py  train_cifar10.py  train_cluster_multiprocess.py  train_cluster_seed_derived.py  train_cluster_unreliable.py  train_distributed_asymmetric.py  train_distributed_cpu_gpu.py  train_distributed_dual_worker.py  train_mnist.py  train_qat_xor.py  train_sine.py  train_vit_cifar10.py  train_xor.py  vit_findings.md
src/zerograd/: __init__.py  _candidate.py  _cluster.py  _distributed.py  _factors.py  _fault_tolerant.py  _fitness.py  _keys.py  _manifest.py  _optimizer.py  _replay.py
tests/: test_candidate_validation.py  test_cluster.py  test_coverage_gaps.py  test_distributed.py  test_fault_tolerant.py  test_fault_tolerant_extras.py  test_fitness_and_factors.py  test_issue_regressions.py  test_keys.py  test_manifest_and_candidate.py  test_manifest_validation.py  test_optimizer_validation.py  test_replay_and_optimizer.py
