[project]
name = "zerograd"
version = "0.2.0"
description = "JAX and Optax primitives for zero-gradient evolutionary optimization."
readme = "README.md"
authors = [
    { name = "Bennett", email = "EthanBnntt@users.noreply.github.com" }
]
requires-python = ">=3.13"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jax>=0.10.2",
    "optax>=0.2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pillow>=12.3.0",
]
